src-tauri/check_error_v2.txt
cargo :    Compiling accounti
ng-flow v0.1.0 (C:\Projects\A
ccountingFlow\src-tauri)
?? ?:1 ??:1
+ cargo check 2>&1 | Out-File
 -Encoding ascii check_error_
v2.txt ; Get- ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpecified: (   Comp  
  iling ac...Flow\src-taur   
 i):String) [], RemoteExc    
eption
    + FullyQualifiedErrorId  
   : NativeCommandError
 
error[E0425]: cannot find val
ue `tenant_id` in this scope
   --> src\ai\ai_service.rs:1
17:60
    |
  8 |     _tenant_id: &str, 
    |     ---------- `_tenant
_id` defined here
...
117 |     crate::core::quota_
manager::QUOTA_MANAGER.record
_usage(tenant_id, 0.00001);
    |                        
                             
       ^^^^^^^^^
    |
help: the leading underscore 
in `_tenant_id` marks it as u
nused, consider renaming it t
o `tenant_id`
    |
  8 -     _tenant_id: &str, 
  8 +     tenant_id: &str, 
    |

For more information about th
is error, try `rustc --explai
n E0425`.
error: could not compile `acc
ounting-flow` (lib) due to 1 
previous error
